- updated to finatra 2.7.0 - dependency mistake fixed : elastic4s-core now used instead of elastic4s-stream - thanks to finatra 2.7.0, it is not more necessary to use TwitterFuture   automatic conversion is done internally